--- a/client/views/index.pug
+++ b/client/views/index.pug
@@ -1,8 +1,30 @@
 doctype html
+
 html(lang="en")
     head
         title sarah
+        meta(
+            name="viewport"
+            content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"
+        )
     body
-        div.wrapper
-            h1 build test
-            h1 test autoprefixer
+        main.content
+            section.content__video
+                video(
+                    playsinline
+                    autoplay
+                    muted
+                    loop
+                    preload
+                )
+                    source(
+                        src='videos/coffee.mp4'
+                        type='video/mp4'
+                    )
+                    source(
+                        src='videos/coffee.webm'
+                        type='video/webm'
+                    )
+            section.content__video-controls
+            section.content__slider
+                article.slider__slide
