--- a/static/main.css
+++ b/static/main.css
@@ -45,13 +45,38 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-.wrapper {
+.content {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex; }
-  .wrapper h1 {
-    font-size: 10em; }
+  display: flex;
+  height: 27.125em;
+  overflow: hidden;
+  width: 100%; }
+  @media (min-width: 48em) {
+    .content {
+      height: 32.5em; } }
 
-.wrapper h1 {
-  color: #f00; }
+.content__video {
+  height: 50%;
+  overflow: hidden;
+  width: 100%; }
+  @media (min-width: 48em) {
+    .content__video {
+      height: 100%;
+      width: 60%; } }
+
+video {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%; }
+
+.content__slider {
+  background-color: #000000;
+  width: 40%;
+  height: 100%; }
+
+.slider__slide {
+  height: 100%;
+  width: 100%; }
