--- a/client/views/index.pug
+++ b/client/views/index.pug
@@ -18,11 +18,7 @@ html(lang="en")
                     preload
                 )
                     source(
-                        src='videos/coffee.mp4'
-                        type='video/mp4'
-                    )
-                    source(
-                        src='videos/coffee.webm'
+                        src='https://dl.dropboxusercontent.com/s/bdmwhzdy1rqxdbn/coffee.webm?dl=0'
                         type='video/webm'
                     )
             section.content__video-controls
