--- a/client/scss/content/slider/_slider.scss
+++ b/client/scss/content/slider/_slider.scss
@@ -3,3 +3,17 @@
     width: 40%;
     height: 100%;
 }
+
+.slider__slides {
+    height: 60%;
+}
+
+.slider__footer {
+    height: 40%;
+}
+
+.slider__cta {
+    color: $color-white;
+    font-style: italic;
+    text-transform: uppercase;
+}
