--- a/client/views/index.pug
+++ b/client/views/index.pug
@@ -7,10 +7,6 @@ html(lang="en")
             name="viewport"
             content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"
         )
-        link(
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Lato:300,300i"
-        )
     body
         main.content
             section.content__video
@@ -22,15 +18,29 @@ html(lang="en")
                     preload
                 )
                     source(
-                        src='https://dl.dropboxusercontent.com/s/bdmwhzdy1rqxdbn/coffee.webm?dl=0'
-                        type='video/webm'
+                        src='https://dl.dropbox.com/s/nvtznxk17mf5mob/coffee.mp4?dl=0'
+                        type='video/mp4'
                     )
             section.content__video-controls
             section.content__slider
                 section.slider__slides
                     article.slider__slide
+                        h2 Get up, get down
+                    article.slider__slide
+                        h2 Get up, get down
+                    article.slider__slide
+                        h2 Feel the turn of rotation and stop
+                    article.slider__slide
+                        h2 See the next one waiting
+                    article.slider__slide
+                        h2 Get up, get down
+                    article.slider__slide
+                        h2 Get up, get down
+                    article.slider__slide
+                        h2 Get up
+                    article.slider__slide
+                        h2 Sentiment's the same but the pair of feet change
                 section.slider__footer
-                    a.slider__cta(
-                        href="#"
-                    ) buy album
+                    p Sylvan Esso on Tour Now
+                    p get Tickets
                     include svg/logo.pug
