--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,4 +1,7 @@
 // colors
+
 $color-black: #000000;
 $color-white: #ffffff;
+$color-transparent-black: rgba($color-black, 0.8);
+$color-transparent-white: rgba($color-white, 0.6);
 $color-yellow: #D6C167;
