--- a/src/scss/base/_media-queries.scss
+++ b/src/scss/base/_media-queries.scss
@@ -1,9 +1,11 @@
-// breakpoints
-$bp-m: 48em;
+@mixin mobile {
+  @media only screen and (max-width: 766px) {
+    @content;
+  }
+}
 
-// queries
-@mixin bp-m {
-  @media (min-width: #{$bp-m}) {
+@mixin desktop {
+  @media only screen and (min-width: 767px) {
     @content;
   }
 }
