--- a/src/scss/content/slider/_slider.scss
+++ b/src/scss/content/slider/_slider.scss
@@ -45,6 +45,11 @@
             font-size: 1.5em;
         }
     }
+
+    .cta {
+        font-size: 1em;
+        text-decoration: underline;
+    }
 }
 
 .slider__logo {
