--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -54,5 +54,5 @@ html(lang="en")
                         h2 Feel the turn of rotation and stop
                 section.slider__footer
                     p Sylvan Esso on Tour Now
-                    p get Tickets
+                    p.cta get tickets
                     include svg/logo.pug
