--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -13,6 +13,7 @@ html(lang="en")
                 video(
                     id="video__modal"
                     preload="none"
+                    playsinline
                 )
                     source(
                         src='https://dl.dropbox.com/s/nvtznxk17mf5mob/coffee.mp4?dl=0'
@@ -53,6 +54,6 @@ html(lang="en")
                     article.slider__slide.hidden
                         h2 Feel the turn of rotation and stop
                 section.slider__footer
-                    p Sylvan Esso on Tour Now
+                    p Sylvan Esso on tour now
                     p.cta get tickets
                     include svg/logo.pug
